err/declare-amqp.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/declare_amqp-0.0.4.egg-info'...
Listing './lib/python3.5/site-packages/declareamqp'...
Compiling './lib/python3.5/site-packages/declareamqp/damqp.py'...
***   File "./lib/python3.5/site-packages/declareamqp/damqp.py", line 25
    print 'Declaring exchange:'
                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/haigha'...
Listing './lib/python3.5/site-packages/haigha/classes'...
Listing './lib/python3.5/site-packages/haigha/connections'...
Listing './lib/python3.5/site-packages/haigha/frames'...
Compiling './lib/python3.5/site-packages/haigha/frames/frame.py'...
***   File "./lib/python3.5/site-packages/haigha/frames/frame.py", line 74
    raise Frame.FormatError, str(e), sys.exc_info()[-1]
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/haigha/transports'...
Compiling './lib/python3.5/site-packages/haigha/transports/event_transport.py'...
***   File "./lib/python3.5/site-packages/haigha/transports/event_transport.py", line 49
    def connect(self, (host, port)):
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/haigha/transports/gevent_transport.py'...
***   File "./lib/python3.5/site-packages/haigha/transports/gevent_transport.py", line 49
    def connect(self, (host, port)):
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/haigha/transports/socket_transport.py'...
***   File "./lib/python3.5/site-packages/haigha/transports/socket_transport.py", line 27
    def connect(self, (host, port), klass=socket.socket):
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/haigha-0.9.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
